[gd_scene load_steps=6 format=2]

[ext_resource path="res://modules/player/resources/karen.tres" type="SpriteFrames" id=1]
[ext_resource path="res://modules/player/scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://modules/ui/Statusbar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 6 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -40 )
current = true

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
frames = ExtResource( 1 )
animation = "Jab"
frame = 3
playing = true

[node name="Jab" type="Area2D" parent="."]
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Jab"]
position = Vector2( 18, -24 )
shape = SubResource( 2 )

[node name="CameraTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InputTimer" type="Timer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Statusbar" parent="UI" instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="SPEED" type="Label" parent="UI"]
margin_left = 240.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 22.0

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="CameraTimer" to="." method="_on_CameraTimer_timeout"]
[connection signal="timeout" from="InputTimer" to="." method="_on_InputTimer_timeout"]
